--- a/template/homepage.html
+++ b/template/homepage.html
@@ -33,6 +33,14 @@
                 <input type="email" id="email" name="email" required>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+                <label for="age">Age</label>
+                <input type="number" min="1" id="age" name="age" required >
+                <label for="weight">Weight</label>
+                <input type="number" min="1" id="weight" name="weight" required >
+                <label for="height">Height</label>
+                <input type="number" min="1" id="height" name="height" required >
                 <button type="submit" class="btn">Sign in</button>
             </form>
         </div>
