--- a/template/giftcard.html
+++ b/template/giftcard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gift Card Redeem Page</title>
-    <link rel="stylesheet" href="giftcard.css">
+    <link rel="stylesheet" href="giftcard2.css">
 </head>
 <body>
     <div class="container">
@@ -33,13 +33,13 @@
                 </div>
             </header>
             <section class="giftcards">
-                <div class="giftcard" data-points="500">
-                    <div class="giftcard-image">GIFT CARD</div>
-                    <div class="giftcard-points">500 <img src="coin.png" alt="coin" class="coin-icon"></div>
+                <div class="giftcard" data-points="50000"><!-- chnage data-points the points required to redeem  -->
+                     <img src ="amazon.png">
+                    <div class="giftcard-points">50000 points</div>
                 </div>
-                <div class="giftcard" data-points="100">
-                    <div class="giftcard-image">GIFT CARD</div>
-                    <div class="giftcard-points">100 <img src="coin.png" alt="coin" class="coin-icon"></div>
+                <div class="giftcard" data-points="10000"><!-- chnage data-points the points required to redeem  -->
+                    <img src ="spotify.jpg">    
+                <div class="giftcard-points">10000 points</div>
                 </div>
             </section>
         </main>
